fix Nav distance between icons on Mobile

--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -113,7 +113,7 @@ nav ul li + li {
   }
 
   nav ul li + li {
-    margin-left: 30px;
+    margin-left: 20px;
   }
 
   nav ul li img {
